@@ -1,68 +1,92 @@
 buildscript {
-	ext {
-		springBootVersion = '2.0.5.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
-}
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-configurations {
-    all*.exclude module : 'spring-boot-starter-logging'
-}
-
-dependencyManagement {
-    imports {
-        mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
+    ext {
+        springBootVersion = '2.0.5.RELEASE'
     }
-    applyMavenExclusions = false
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
+plugins {
+    id 'java'
+    id 'eclipse'
+    id 'idea'
+    id 'org.springframework.boot' version '2.0.5.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.6.RELEASE'
+    
+    // Lombok plugin
+    id 'io.freefair.lombok' version '5.3.0'
+}
+
+group = 'com.yourcompany'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
-tasks.withType(FindBugs) {
-    reports {
-        xml.enabled false
-        html.enabled true
-    }
+configurations {
+    all*.exclude module: 'spring-boot-starter-logging'
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-hateoas')
-    compile('org.springframework.boot:spring-boot-starter-security')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-starter-log4j2')
-	
-	compile('org.flywaydb:flyway-core')
-	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
-	compile('io.jsonwebtoken:jjwt:0.9.1')
-	compile('joda-time:joda-time:2.10')
-	implementation('commons-lang:commons-lang:2.6')
-	compile('com.google.collections:google-collections:1.0')
+    // Spring Boot Starters
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('org.springframework.boot:spring-boot-starter-hateoas')
+    implementation('org.springframework.boot:spring-boot-starter-security')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-log4j2')
     
-   compileOnly('org.projectlombok:lombok')
-	runtime('com.h2database:h2')
+    // Database and Migration
+    implementation('org.flywaydb:flyway-core')
+    implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+    runtimeOnly('com.h2database:h2')
+    
+    // Utilities
+    implementation('io.jsonwebtoken:jjwt:0.9.1')
+    implementation('joda-time:joda-time:2.10')
+    implementation('commons-lang:commons-lang:2.6')
+    implementation('com.google.collections:google-collections:1.0')
+    
+    // Lombok
+    compileOnly('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+    
+    // Test Dependencies
+    testImplementation('io.rest-assured:rest-assured:3.1.1')
+    testImplementation('io.rest-assured:spring-mock-mvc:3.1.1')
+    testImplementation('org.springframework.security:spring-security-test')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
+    testImplementation('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.2')
+    
+    // Test Lombok
+    testCompileOnly('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
+}
 
-    testCompile 'io.rest-assured:rest-assured:3.1.1'
-	testCompile 'io.rest-assured:spring-mock-mvc:3.1.1'
-	testCompile 'org.springframework.security:spring-security-test'
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
-    testCompile('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.2')
+// Ensure annotation processing
+tasks.withType(JavaCompile) {
+    options.annotationProcessorPath = configurations.annotationProcessor
+    
+    // Additional Lombok configuration
+    options.compilerArgs += [
+        '-Xlint:all',
+        '-Werror',
+        '-proc:full'
+    ]
+}
+
+// Disable tests during build if needed
+test {
+    enabled = false
+}
+
+// Gradle wrapper task
+wrapper {
+    gradleVersion = '4.10.3'
 }
